--- a/Instructor Notebooks/sect_02_bash_and_git.ipynb
+++ b/Instructor Notebooks/sect_02_bash_and_git.ipynb
@@ -19,6 +19,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Questions?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Where changes show up on GitHub?\n",
+    "    - Default page == README.md\n",
+    "    - We can't change the page at startup\n",
+    "    \n",
+    "- `git push`\n",
+    "- branches?\n",
+    "- is `|` == `>>`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Learning Objectives"
    ]
   },
@@ -48,30 +69,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Questions?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
     "# Basic Bash"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- [25 Top Bash Commands Cheat Sheet/Blog Post](https://www.educative.io/blog/bash-shell-command-cheat-sheet)\n",
     "> \"Bash\" - The name is an acronym for the ‘Bourne-Again SHell’, a pun on Stephen Bourne, the author of the direct ancestor of the current Unix shell sh, which appeared in the Seventh Edition Bell Labs Research version of Unix. - [Bash Reference Manual](https://www.gnu.org/software/bash/manual/bash.html#What-is-Bash_003f)"
@@ -79,41 +82,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Common Bash Commands"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "- `cd`: \n",
-    "- `pwd`:\n",
-    "- `ls`:\n",
-    "- `echo`:\n",
-    "- `touch`:\n",
-    "- `mkdir`:"
+    "- `cd`: change directory\n",
+    "- `pwd`:print working directory\n",
+    "- `ls`: lists all files and folders\n",
+    "- `echo`: prints to terminal OR to a file `>> file.txt`\n",
+    "- `touch`: creates a new file\n",
+    "- `mkdir`: Makes a new folder\n",
+    "- `mv`: moves file "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Different Programs can run commands"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- `conda` \n",
     "- `python`\n",
@@ -175,67 +171,53 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# GitHub Workflow"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Resources"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- [Git Cheat Sheet from our Resources Folder](https://drive.google.com/drive/u/0/folders/1IOfGYFFDxWO7Zv8o4WOx0rHIYdyd8fXk)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Working with GitHub "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "<img src=\"http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/git-workflow-1.png\" width=60%>\n",
+    "<img src=\"http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/git-workflow-1.png\" width=80%>\n",
     "\n",
     "<!---<img src='https://res.cloudinary.com/practicaldev/image/fetch/s--Si7ksd-d--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://cdn-images-1.medium.com/max/800/1%2AdiRLm1S5hkVoh5qeArND0Q.png'/>\n",
     "\n",
-    "> Source: https://dev.to/sublimegeek/git-staging-area-explained-like-im-five-1anh--->"
+    "> Source: https://dev.to/sublimegeek/git-staging-area-explained-like-im-five-1anh--->\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## The Basic Git Workflow for Labs"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "1. Fork the lesson/lab that you want to work on locally.\n",
     "    - Copy the URL from your forked repo.\n",
@@ -263,9 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Walk-through \n",
     "- Let's go through these steps with an upcoming lab. \n",
@@ -279,18 +259,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Other GitHub commands"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- `git status`: what is staged? working directory?\n",
     "- `git diff`: differences between commits or working directory\n",
@@ -301,18 +277,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### To make a new repo locally"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- To create a new repo from inside a folder on your computer, in your terminal type `git init`.\n",
     "```bash\n",
@@ -324,9 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- Syncing up with GitHub:\n",
     "    - Create a New repo on GitHub.com and copy the repo's URL\n",
@@ -339,18 +309,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Collaborating with Git: Branches"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "<img src='https://www.atlassian.com/dam/jcr:746be214-eb99-462c-9319-04a4d2eeebfa/01.svg' width=80%/>\n",
     "\n",
@@ -359,9 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "<!---see the branches\n",
     "```\n",
@@ -379,27 +343,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Merges"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "`git merge other_branch`: Merges the **other_branch** into your current branch you're on "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "<img src='https://www.atlassian.com/dam/jcr:91b1bdf5-fda3-4d20-b108-0bb9eea402b2/08.svg' width=80%/>\n",
     "\n",
@@ -412,27 +370,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Bash (Bonus)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Hacking Your Terminal AKA Giving Your Terminal Super Powers"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- When you set up your environment, you created a file called `~/.bash_profile`\n",
     "\n",
@@ -447,18 +399,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Q1: I can't see this file in my user folder. Why not?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- You will need to make sure your Finder/Windows Explorer is showing hidden files.\n",
     "- On a Mac, inside Finder press `Cmd+Shift+.` to reveal hidden files.\n",
@@ -471,18 +419,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Inside your `.bash_profile`:\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- Find your .bash_profile file inside your User folder and open it with a text editor (recommend SublimeText3 for tasks like this, but any editor works).\n",
     "\n",
@@ -511,9 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- This was added by Anaconda and is what teaches your terminal about `conda` commands and your Python installation.\n",
     "- The lessons also had you run a command to set your default enviroment:\n",
