--- a/Instructor Notebooks/python-oop/Iteration-Functions-and-Stats-Teacher-Version.ipynb
+++ b/Instructor Notebooks/python-oop/Iteration-Functions-and-Stats-Teacher-Version.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-24T22:00:46.239281Z",
+     "start_time": "2020-04-24T22:00:46.237105Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# import os\n",
+    "# from IPython.display import display,display_markdown,Markdown\n",
+    "# os.listdir()\n",
+    "# with open('iteration-functions-README.md') as f:\n",
+    "#     display(Markdown(f.read()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -781,7 +800,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
