Added README info on syncing & moved notebook to Mod 1 folder

--- a/Mod 1/sect_03_control_flow_and_functions_student.ipynb
+++ b/Mod 1/sect_03_control_flow_and_functions_student.ipynb
@@ -158,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T23:19:34.371722Z",
-     "start_time": "2020-04-24T23:19:34.368386Z"
+     "end_time": "2020-04-25T17:17:15.173700Z",
+     "start_time": "2020-04-25T17:17:15.170417Z"
     }
    },
    "outputs": [],
@@ -185,11 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T23:27:23.638133Z",
-     "start_time": "2020-04-24T23:27:23.633326Z"
+     "end_time": "2020-04-25T17:17:16.023101Z",
+     "start_time": "2020-04-25T17:17:16.011683Z"
     }
    },
    "outputs": [
@@ -204,7 +204,7 @@
        " 'slide_3': 'turnip pickle'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,11 +218,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T23:27:56.496996Z",
-     "start_time": "2020-04-24T23:27:56.492270Z"
+     "end_time": "2020-04-25T17:18:06.396608Z",
+     "start_time": "2020-04-25T17:18:06.391694Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This dish is main\n",
+      "This dish is protein\n",
+      "This dish is ozprotein\n",
+      "This dish is side_1\n",
+      "This dish is side_2\n",
+      "This dish is slide_3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dish in dishes:\n",
+    "    print(f\"This dish is {dish}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-25T17:18:35.507490Z",
+     "start_time": "2020-04-25T17:18:35.502349Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This dish is main\n",
+      "This dish is protein\n",
+      "This dish is ozprotein\n",
+      "This dish is side_1\n",
+      "This dish is side_2\n",
+      "This dish is slide_3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[print(f\"This dish is {dish}\") for dish in dishes ] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-25T17:17:26.259587Z",
+     "start_time": "2020-04-25T17:17:26.252802Z"
     }
    },
    "outputs": [
@@ -237,7 +302,7 @@
        "  'slide_3': 'turnip pickle'}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,11 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T23:28:41.181544Z",
-     "start_time": "2020-04-24T23:28:41.177522Z"
+     "end_time": "2020-04-25T17:17:26.600714Z",
+     "start_time": "2020-04-25T17:17:26.596711Z"
     }
    },
    "outputs": [
@@ -265,7 +330,7 @@
        "'seaweed'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
