Update sect_04 notebook

--- a/Instructor Notebooks/sect_04/sect_04_intro_to_libraries_numpy_solution.ipynb
+++ b/Instructor Notebooks/sect_04/sect_04_intro_to_libraries_numpy_solution.ipynb
@@ -11,6 +11,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Questions?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Activity:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Pair Programming in Breakout Rooms\n",
+    "    - https://github.com/jirvingphd/dtsc-pt-041320-sect-04-python-libraries-study-group\n",
+    "    - `git clone https://github.com/jirvingphd/dtsc-pt-041320-sect-04-python-libraries-study-group.git`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "\n",
     "#### _Our goals today are to be able to_: <br/>\n",
