--- a/Mod 1/sect_04/sect_04_intro_to_libraries_numpy_SG.ipynb
+++ b/Mod 1/sect_04/sect_04_intro_to_libraries_numpy_SG.ipynb
@@ -41,6 +41,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Learning Objectives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### _Our goals today are to be able to_: <br/>\n",
     "\n",
     "- Identify and import Python modules and packages (libraries)\n",
@@ -49,28 +56,10 @@
     "\n",
     "#### _Big questions for this lesson_: <br/>\n",
     "- What is a package, what do packages do, and why might we want to use them?\n",
-    "- When do we want to use NumPy?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Activation:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "- When do we want to use NumPy?\n",
+    "\n",
+    "<!---### Activation:\n",
+    "\n",
     "![excel2](https://raw.githubusercontent.com/jirvingphd/dsc-lp-libraries-numpy/master/img/excelpic2.jpg)\n",
     "\n",
     "Most people have used Microsoft Excel or Google sheets. But what are the limitations of excel?\n",
@@ -78,19 +67,48 @@
     "- [Take a minute to read this article](https://www.bbc.com/news/magazine-22223190)\n",
     "- make a list of problems excel presents\n",
     "\n",
-    "- **Q: How is using python different?**"
+    "- **Q: How is using python different?**\n",
+    "\n",
+    "- **A: Python...**\n",
+    "    -  \n",
+    "    --->"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
+   "metadata": {},
    "source": [
-    "- **A: Python...**\n",
-    "    -  "
+    "#### Pair Programming / Group Activity:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Pair Programming in Breakout Rooms\n",
+    "    - https://github.com/jirvingphd/dtsc-pt-041320-sect-04-python-libraries-study-group\n",
+    "    - `git clone https://github.com/jirvingphd/dtsc-pt-041320-sect-04-python-libraries-study-group.git`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Questions?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
@@ -101,9 +119,17 @@
     }
    },
    "source": [
-    "## 1. Importing Python packages \n",
-    "\n",
-    "\n",
+    "# Importing Python packages "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "In an earlier lesson, we wrote a function to calculate the mean of an list. That was **tedious**. To make our code efficient we could store that function in a *python module* and call it later when we need it. \n",
     "\n",
     "And thankfully, other people have _also_ wrote and optimized functions and wrapped them into **modules** and **packages** (also known as _libraries_ )\n",
@@ -113,7 +139,7 @@
     "[NumPy](https://www.numpy.org/) is the fundamental package for scientific computing with Python. \n",
     "\n",
     "\n",
-    "To import a package type `import` followed by the name of the library as shown below.\n"
+    "To import a package type `import` followed by the name of the library as shown below."
    ]
   },
   {
@@ -124,7 +150,7 @@
     }
    },
    "source": [
-    "### Terminology"
+    "## Terminology"
    ]
   },
   {
@@ -157,6 +183,17 @@
     }
    },
    "source": [
+    "## pip & the Python Package Index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "![python-fact](https://raw.githubusercontent.com/jirvingphd/dsc-lp-libraries-numpy/master/img/python_def.png)"
    ]
   },
@@ -168,18 +205,79 @@
     }
    },
    "source": [
-    "### pip & the Python Package Index"
+    "![pypi](https://raw.githubusercontent.com/jirvingphd/dsc-lp-libraries-numpy/master/img/pypi_packages.png)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
+    "ExecuteTime": {
+     "end_time": "2020-05-01T17:04:01.195522Z",
+     "start_time": "2020-05-01T17:03:56.039995Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fsds v0.2.8 loaded.  Read the docs: https://fs-ds.readthedocs.io/en/latest/ \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626\" ><caption>Loaded Packages and Handles</caption><thead>    <tr>        <th class=\"col_heading level0 col0\" >Handle</th>        <th class=\"col_heading level0 col1\" >Package</th>        <th class=\"col_heading level0 col2\" >Description</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                                <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row0_col0\" class=\"data row0 col0\" >dp</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row0_col1\" class=\"data row0 col1\" >IPython.display</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row0_col2\" class=\"data row0 col2\" >Display modules with helpful display and clearing commands.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row1_col0\" class=\"data row1 col0\" >fs</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row1_col1\" class=\"data row1 col1\" >fsds</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row1_col2\" class=\"data row1 col2\" >Custom data science bootcamp student package</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row2_col0\" class=\"data row2 col0\" >mpl</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row2_col1\" class=\"data row2 col1\" >matplotlib</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row2_col2\" class=\"data row2 col2\" >Matplotlib's base OOP module with formatting artists</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row3_col0\" class=\"data row3 col0\" >plt</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row3_col1\" class=\"data row3 col1\" >matplotlib.pyplot</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row3_col2\" class=\"data row3 col2\" >Matplotlib's matlab-like plotting module</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row4_col0\" class=\"data row4 col0\" >np</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row4_col1\" class=\"data row4 col1\" >numpy</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row4_col2\" class=\"data row4 col2\" >scientific computing with Python</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row5_col0\" class=\"data row5 col0\" >pd</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row5_col1\" class=\"data row5 col1\" >pandas</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row5_col2\" class=\"data row5 col2\" >High performance data structures and tools</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row6_col0\" class=\"data row6 col0\" >sns</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row6_col1\" class=\"data row6 col1\" >seaborn</td>\n",
+       "                        <td id=\"T_c10e1768_8bcd_11ea_8354_4865ee12e626row6_col2\" class=\"data row6 col2\" >High-level data visualization library based on matplotlib</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1a23dcacf8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "![pypi](https://raw.githubusercontent.com/jirvingphd/dsc-lp-libraries-numpy/master/img/pypi_packages.png)"
+    "!pip install -U fsds\n",
+    "from fsds.imports import *"
    ]
   },
   {
@@ -224,7 +322,7 @@
     }
    },
    "source": [
-    "### First library we will import is `Numpy`\n",
+    "# First library we will import is `Numpy`\n",
     "\n",
     "\n",
     "![numpy](https://raw.githubusercontent.com/donnemartin/data-science-ipython-notebooks/master/images/numpy.png)\n",
@@ -245,14 +343,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:35:33.317995Z",
-     "start_time": "2020-04-29T23:35:33.242418Z"
+     "end_time": "2020-05-01T16:58:09.175938Z",
+     "start_time": "2020-05-01T16:58:09.062922Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy # Look, ma! we're importing!\n",
     "l = [1,2,3]\n",
@@ -273,14 +379,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:35:33.326676Z",
-     "start_time": "2020-04-29T23:35:33.319488Z"
+     "end_time": "2020-05-01T16:58:09.587948Z",
+     "start_time": "2020-05-01T16:58:09.579190Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(x)"
    ]
@@ -300,14 +417,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:35:33.331303Z",
-     "start_time": "2020-04-29T23:35:33.328260Z"
+     "end_time": "2020-05-01T16:58:10.450935Z",
+     "start_time": "2020-05-01T16:58:10.447985Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np # np = alias\n",
     "\n",
@@ -325,11 +450,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:35:33.731793Z",
-     "start_time": "2020-04-29T23:35:33.332826Z"
+     "end_time": "2020-05-01T16:58:11.749628Z",
+     "start_time": "2020-05-01T16:58:11.193090Z"
     }
    },
    "outputs": [],
@@ -353,11 +478,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:35:33.825417Z",
-     "start_time": "2020-04-29T23:35:33.733149Z"
+     "end_time": "2020-05-01T16:58:12.278814Z",
+     "start_time": "2020-05-01T16:58:12.155557Z"
     }
    },
    "outputs": [],
@@ -379,11 +504,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:35:33.828854Z",
-     "start_time": "2020-04-29T23:35:33.826581Z"
+     "end_time": "2020-05-01T16:58:13.221072Z",
+     "start_time": "2020-05-01T16:58:13.219142Z"
     }
    },
    "outputs": [],
@@ -393,14 +518,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:35:33.832446Z",
-     "start_time": "2020-04-29T23:35:33.830004Z"
+     "end_time": "2020-05-01T16:58:13.728321Z",
+     "start_time": "2020-05-01T16:58:13.725525Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
     "#Did we get an error? What about when we run the following command?\n",
     "\n",
@@ -432,7 +565,7 @@
     }
    },
    "source": [
-    "## 2. NumPy versus base Python\n",
+    "## NumPy versus base Python\n",
     "\n",
     "Now that we know packages exist, why do we want to use them? Let us examine a comparison between base Python and Numpy.\n",
     "\n",
@@ -1053,6 +1186,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# ACTIVITY: Pair Programming "
    ]
   },
@@ -1064,24 +1204,36 @@
     }
    },
    "source": [
-    "In pairs, run the speed test with a different number, and share your results with the class."
+    "- The remainder of this notebook is a Pair Programming Activity (time=15-30 min(?))\n",
+    "\n",
+    "    - We will break into groups of 2-3 students. \n",
+    "    - One student will share their screen while the group works together to solve the tasks. \n",
+    "\n",
+    "    - Clone the activity repository to your computer (or [visit GitHub and fork it](https://github.com/jirvingphd/dtsc-pt-041320-sect-04-python-libraries-study-group) first so you can save your work.)\n",
+    "- `git clone https://github.com/jirvingphd/dtsc-pt-041320-sect-04-python-libraries-study-group.git`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Making our own module\n",
+    "## Making our own module"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![modlife](https://media1.giphy.com/media/dW0KhIROCaAdCO0V3S/giphy.gif?cid=790b76115d36096678416c65519d8082&rid=giphy.gif)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:20:44.812417Z",
-     "start_time": "2020-04-29T23:20:43.577Z"
+     "end_time": "2020-05-01T17:02:03.879541Z",
+     "start_time": "2020-05-01T17:02:03.854667Z"
     }
    },
    "outputs": [],
@@ -1094,11 +1246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:20:44.813205Z",
-     "start_time": "2020-04-29T23:20:43.579Z"
+     "end_time": "2020-05-01T17:02:04.978020Z",
+     "start_time": "2020-05-01T17:02:04.957370Z"
     }
    },
    "outputs": [],
@@ -1110,7 +1262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example: Convert F to C\n",
+    "### Example: Convert F to C\n",
     "\n",
     "1. This function is already implemented in `temperizer.py`.\n",
     "2. Notice that we can call the imported function and see the result."
@@ -1118,54 +1270,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:20:44.813761Z",
-     "start_time": "2020-04-29T23:20:43.583Z"
+     "end_time": "2020-05-01T17:02:09.563280Z",
+     "start_time": "2020-05-01T17:02:09.542942Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 32F should equal 0C\n",
-    "tps.convert_f_to_c(32)"
+    "tp.convert_f_to_c(32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:20:44.814653Z",
-     "start_time": "2020-04-29T23:20:43.585Z"
+     "end_time": "2020-05-01T17:02:12.287766Z",
+     "start_time": "2020-05-01T17:02:12.268949Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-40.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# -40F should equal -40C\n",
-    "tps.convert_f_to_c(-40)"
+    "tp.convert_f_to_c(-40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:20:44.815434Z",
-     "start_time": "2020-04-29T23:20:43.588Z"
+     "end_time": "2020-05-01T17:02:14.257301Z",
+     "start_time": "2020-05-01T17:02:14.236900Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 212F should equal 100C\n",
-    "tps.convert_f_to_c(212)"
+    "tp.convert_f_to_c(212)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your turn: Convert C to F\n",
+    "### Your turn: Convert C to F\n",
     "\n",
     "1. Find the stub function in `temperizer.py`\n",
     "2. The word `pass` means \"this space intentionally left blank.\"\n",
@@ -1175,17 +1360,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-29T23:20:44.816228Z",
-     "start_time": "2020-04-29T23:20:43.590Z"
+     "end_time": "2020-05-01T17:02:17.884845Z",
+     "start_time": "2020-05-01T17:02:17.865014Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 0C should equal 32F\n",
-    "tps.convert_c_to_f(0)"
+    "tp.convert_c_to_f(0)"
    ]
   },
   {
@@ -1226,8 +1422,17 @@
     }
    },
    "source": [
-    "## Next: Adding New Functions\n",
-    "\n",
+    "## Next: Adding New Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "You need to add support for Kelvin to the `temperizer` library.\n",
     "\n",
     "1. Create new _stub functions_ in `temperizer.py`:\n",
@@ -1338,7 +1543,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1367,7 +1571,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
