--- a/Mod 1/sect_08_mongodb.ipynb
+++ b/Mod 1/sect_08_mongodb.ipynb
@@ -29,7 +29,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## UPDATED INSTALLATION INSTRUCTIONS"
+    "## Questions \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `myclient = pymongo.MongoClient('mongodb://localhost:27017')`\n",
+    "    - Where do we find the local host number?\n",
+    "\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MongoDB UPDATED INSTALLATION INSTRUCTIONS"
    ]
   },
   {
@@ -282,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %conda install pymongo\n",
+    "#%conda install pymongo\n",
     "try:\n",
     "    import pymongo\n",
     "except: \n",
@@ -435,7 +452,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x10fa76648>"
+       "<pymongo.results.InsertOneResult at 0x10ed89cc8>"
       ]
      },
      "execution_count": 7,
@@ -451,6 +468,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list(results)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -459,16 +485,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectId('5ebc6e10824f52e507343c5d')"
+       "ObjectId('5ebc7f839e426169e227264d')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,19 +528,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ObjectId('5ebc6e10824f52e507343c5e'),\n",
-       " ObjectId('5ebc6e10824f52e507343c5f'),\n",
-       " ObjectId('5ebc6e10824f52e507343c60'),\n",
-       " ObjectId('5ebc6e10824f52e507343c61')]"
+       "[ObjectId('5ebc7fb59e426169e227264e'),\n",
+       " ObjectId('5ebc7fb59e426169e227264f'),\n",
+       " ObjectId('5ebc7fb59e426169e2272650'),\n",
+       " ObjectId('5ebc7fb59e426169e2272651')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -571,16 +597,18 @@
      "output_type": "stream",
      "text": [
       "{'_id': ObjectId('5ebc6d837d8c59d444d93d80'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
-      "{'_id': ObjectId('5ebc6d837d8c59d444d93d81'), 'name': 'John Doe jr.', 'address': '', 'age': 0.5}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d82'), 'name': 'Jane Doe', 'address': '234 elm street', 'age': 7}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d83'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
-      "{'_id': ObjectId('5ebc6da07d8c59d444d93d84'), 'name': 'John Doe jr.', 'address': '', 'age': 0.5}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d85'), 'name': 'John Doe jr.', 'address': '', 'age': 0.5}\n",
-      "{'_id': ObjectId('5ebc6e10824f52e507343c5d'), 'name': 'John Doe', 'address': '123 elm street', 'age': 28}\n",
       "{'_id': ObjectId('5ebc6e10824f52e507343c5e'), 'name': 'Jane Doe', 'address': '234 elm street', 'age': 7}\n",
       "{'_id': ObjectId('5ebc6e10824f52e507343c5f'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
       "{'_id': ObjectId('5ebc6e10824f52e507343c60'), 'name': 'John Doe jr.', 'address': '', 'age': 0.5}\n",
-      "{'_id': ObjectId('5ebc6e10824f52e507343c61'), 'name': 'John Doe jr.', 'address': '', 'age': 0.5}\n"
+      "{'_id': ObjectId('5ebc6e10824f52e507343c61'), 'name': 'John Doe jr.', 'address': '', 'age': 0.5}\n",
+      "{'_id': ObjectId('5ebc7f839e426169e227264d'), 'name': 'John Doe', 'address': '123 elm street', 'age': 28}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e227264e'), 'name': 'Jane Doe', 'address': '234 elm street', 'age': 7}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e227264f'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e2272650'), 'name': 'John Doe jr.', 'address': '', 'age': 0.5}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e2272651'), 'name': 'John Doe jr.', 'address': '', 'age': 0.5}\n"
      ]
     }
    ],
@@ -588,6 +616,15 @@
     "query_1 = mycollection.find({})\n",
     "for x in query_1:\n",
     "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list(query_1)"
    ]
   },
   {
@@ -601,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -609,16 +646,18 @@
      "output_type": "stream",
      "text": [
       "{'_id': ObjectId('5ebc6d837d8c59d444d93d80'), 'name': 'Santa Claus', 'address': 'The North Pole'}\n",
-      "{'_id': ObjectId('5ebc6d837d8c59d444d93d81'), 'name': 'John Doe jr.', 'address': ''}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d82'), 'name': 'Jane Doe', 'address': '234 elm street'}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d83'), 'name': 'Santa Claus', 'address': 'The North Pole'}\n",
-      "{'_id': ObjectId('5ebc6da07d8c59d444d93d84'), 'name': 'John Doe jr.', 'address': ''}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d85'), 'name': 'John Doe jr.', 'address': ''}\n",
-      "{'_id': ObjectId('5ebc6e10824f52e507343c5d'), 'name': 'John Doe', 'address': '123 elm street'}\n",
       "{'_id': ObjectId('5ebc6e10824f52e507343c5e'), 'name': 'Jane Doe', 'address': '234 elm street'}\n",
       "{'_id': ObjectId('5ebc6e10824f52e507343c5f'), 'name': 'Santa Claus', 'address': 'The North Pole'}\n",
       "{'_id': ObjectId('5ebc6e10824f52e507343c60'), 'name': 'John Doe jr.', 'address': ''}\n",
-      "{'_id': ObjectId('5ebc6e10824f52e507343c61'), 'name': 'John Doe jr.', 'address': ''}\n"
+      "{'_id': ObjectId('5ebc6e10824f52e507343c61'), 'name': 'John Doe jr.', 'address': ''}\n",
+      "{'_id': ObjectId('5ebc7f839e426169e227264d'), 'name': 'John Doe', 'address': '123 elm street'}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e227264e'), 'name': 'Jane Doe', 'address': '234 elm street'}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e227264f'), 'name': 'Santa Claus', 'address': 'The North Pole'}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e2272650'), 'name': 'John Doe jr.', 'address': ''}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e2272651'), 'name': 'John Doe jr.', 'address': ''}\n"
      ]
     }
    ],
@@ -630,7 +669,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'age': 547}\n",
+      "{'age': 7}\n",
+      "{'age': 547}\n",
+      "{'age': 0.5}\n",
+      "{'age': 7}\n",
+      "{'age': 547}\n",
+      "{'age': 0.5}\n",
+      "{'age': 0.5}\n",
+      "{'age': 28}\n",
+      "{'age': 7}\n",
+      "{'age': 547}\n",
+      "{'age': 0.5}\n",
+      "{'age': 0.5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_2 = mycollection.find({}, {'_id': 0, 'name': 0, 'address': 0})\n",
+    "for item in query_2:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -656,16 +726,18 @@
      "output_type": "stream",
      "text": [
       "{'_id': ObjectId('5ebc6d837d8c59d444d93d80'), 'name': 'Santa Claus', 'address': 'The North Pole'}\n",
-      "{'_id': ObjectId('5ebc6d837d8c59d444d93d81'), 'name': 'John Doe jr.', 'address': ''}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d82'), 'name': 'Jane Doe', 'address': '234 elm street'}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d83'), 'name': 'Santa Claus', 'address': 'The North Pole'}\n",
-      "{'_id': ObjectId('5ebc6da07d8c59d444d93d84'), 'name': 'John Doe jr.', 'address': ''}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d85'), 'name': 'John Doe jr.', 'address': ''}\n",
-      "{'_id': ObjectId('5ebc6e10824f52e507343c5d'), 'name': 'John Doe', 'address': '123 elm street'}\n",
       "{'_id': ObjectId('5ebc6e10824f52e507343c5e'), 'name': 'Jane Doe', 'address': '234 elm street'}\n",
       "{'_id': ObjectId('5ebc6e10824f52e507343c5f'), 'name': 'Santa Claus', 'address': 'The North Pole'}\n",
       "{'_id': ObjectId('5ebc6e10824f52e507343c60'), 'name': 'John Doe jr.', 'address': ''}\n",
-      "{'_id': ObjectId('5ebc6e10824f52e507343c61'), 'name': 'John Doe jr.', 'address': ''}\n"
+      "{'_id': ObjectId('5ebc6e10824f52e507343c61'), 'name': 'John Doe jr.', 'address': ''}\n",
+      "{'_id': ObjectId('5ebc7f839e426169e227264d'), 'name': 'John Doe', 'address': '123 elm street'}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e227264e'), 'name': 'Jane Doe', 'address': '234 elm street'}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e227264f'), 'name': 'Santa Claus', 'address': 'The North Pole'}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e2272650'), 'name': 'John Doe jr.', 'address': ''}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e2272651'), 'name': 'John Doe jr.', 'address': ''}\n"
      ]
     }
    ],
@@ -693,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +774,8 @@
      "text": [
       "{'_id': ObjectId('5ebc6d837d8c59d444d93d80'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d83'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
-      "{'_id': ObjectId('5ebc6e10824f52e507343c5f'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n"
+      "{'_id': ObjectId('5ebc6e10824f52e507343c5f'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e227264f'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n"
      ]
     }
    ],
@@ -721,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -730,8 +803,9 @@
      "text": [
       "{'_id': ObjectId('5ebc6d837d8c59d444d93d80'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
       "{'_id': ObjectId('5ebc6da07d8c59d444d93d83'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
-      "{'_id': ObjectId('5ebc6e10824f52e507343c5d'), 'name': 'John Doe', 'address': '123 elm street', 'age': 28}\n",
-      "{'_id': ObjectId('5ebc6e10824f52e507343c5f'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n"
+      "{'_id': ObjectId('5ebc6e10824f52e507343c5f'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n",
+      "{'_id': ObjectId('5ebc7f839e426169e227264d'), 'name': 'John Doe', 'address': '123 elm street', 'age': 28}\n",
+      "{'_id': ObjectId('5ebc7fb59e426169e227264f'), 'name': 'Santa Claus', 'address': 'The North Pole', 'age': 547}\n"
      ]
     }
    ],
@@ -774,14 +848,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('5ebc6e10824f52e507343c5d'), 'name': 'John Doe', 'address': '123 elm street', 'age': 29, 'birthday': '02/20/1986'}\n"
+      "{'_id': ObjectId('5ebc7f839e426169e227264d'), 'name': 'John Doe', 'address': '123 elm street', 'age': 29, 'birthday': '02/20/1986'}\n"
      ]
     }
    ],
@@ -812,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -862,17 +936,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'_id': ObjectId('5ebc6da07d8c59d444d93d84'),\n",
-       "  'name': 'John Doe jr.',\n",
-       "  'address': '',\n",
-       "  'age': 0.5},\n",
-       " {'_id': ObjectId('5ebc6da07d8c59d444d93d85'),\n",
+       "[{'_id': ObjectId('5ebc6da07d8c59d444d93d85'),\n",
        "  'name': 'John Doe jr.',\n",
        "  'address': '',\n",
        "  'age': 0.5},\n",
@@ -883,10 +960,18 @@
        " {'_id': ObjectId('5ebc6e10824f52e507343c61'),\n",
        "  'name': 'John Doe jr.',\n",
        "  'address': '',\n",
+       "  'age': 0.5},\n",
+       " {'_id': ObjectId('5ebc7fb59e426169e2272650'),\n",
+       "  'name': 'John Doe jr.',\n",
+       "  'address': '',\n",
+       "  'age': 0.5},\n",
+       " {'_id': ObjectId('5ebc7fb59e426169e2272651'),\n",
+       "  'name': 'John Doe jr.',\n",
+       "  'address': '',\n",
        "  'age': 0.5}]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,17 +983,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5ebc6da07d8c59d444d93d84\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "deleted = mycollection.delete_one({'_id':'5ebc6da07d8c59d444d93d85'})\n",
+    "deleted.deleted_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(johns[0]['_id'])"
    ]
@@ -924,32 +1022,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'_id': ObjectId('5ebc6da07d8c59d444d93d84'),\n",
+       "[{'_id': ObjectId('5ebc6da07d8c59d444d93d85'),\n",
        "  'name': 'John Doe jr.',\n",
        "  'address': '',\n",
        "  'age': 0.5}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from bson import ObjectId\n",
-    "query = {'_id':ObjectId('5ebc6da07d8c59d444d93d84')}\n",
+    "query = {'_id':ObjectId('5ebc6da07d8c59d444d93d85')}\n",
     "list(mycollection.find(query))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +1056,7 @@
        "1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,6 +1064,84 @@
    "source": [
     "deletion_3 = mycollection.delete_one(query)\n",
     "deletion_3.deleted_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('5ebc6e10824f52e507343c60'),\n",
+       "  'name': 'John Doe jr.',\n",
+       "  'address': '',\n",
+       "  'age': 0.5},\n",
+       " {'_id': ObjectId('5ebc6e10824f52e507343c61'),\n",
+       "  'name': 'John Doe jr.',\n",
+       "  'address': '',\n",
+       "  'age': 0.5},\n",
+       " {'_id': ObjectId('5ebc7fb59e426169e2272650'),\n",
+       "  'name': 'John Doe jr.',\n",
+       "  'address': '',\n",
+       "  'age': 0.5},\n",
+       " {'_id': ObjectId('5ebc7fb59e426169e2272651'),\n",
+       "  'name': 'John Doe jr.',\n",
+       "  'address': '',\n",
+       "  'age': 0.5}]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "johns =list(mycollection.find({\"name\":'John Doe jr.'}))\n",
+    "johns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deleted = mycollection.delete_many({})\n",
+    "deleted.deleted_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = mycollection.find({})\n",
+    "[print(x) for x in res]"
    ]
   },
   {
