Added assets for sect 10 to get URLs

--- a/Mod 1/sect_09_JSON_APIs_SG.ipynb
+++ b/Mod 1/sect_09_JSON_APIs_SG.ipynb
@@ -114,7 +114,27 @@
     "    - Can’t figure out where to find when the ISS passes over NY next. Can we go over how to find this?\n",
     "\n",
     "\n",
-    "- When doing the Yelp API. We create a .secret. After this we’re asked to create an API key dict and a client dict. I could run the lab using the API dict but when I tried plugging the client ID dict it wasn’t in the right JSON format I believe? What’s the correct syntax here?\n"
+    "- When doing the Yelp API. We create a .secret. After this we’re asked to create an API key dict and a client dict. I could run the lab using the API dict but when I tried plugging the client ID dict it wasn’t in the right JSON format I believe? What’s the correct syntax here?\n",
+    "\n",
+    "- Any way to recreate this using a normal for loop v list comprehension?\n",
+    "`df.columns = [item['name'] for item in data['meta']['view']['columns']]`\n",
+    "From Exploring and Transforming JSON Schemas\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "## List comp\n",
+    "columns = [item['name'] for item in data['meta']['view']['columns']]\n",
+    "\n",
+    "\n",
+    "## For loop\n",
+    "columns = []\n",
+    "for item in data['meta']['view']['columns']:\n",
+    "    columns.append(item['name'])\n",
+    "```"
    ]
   },
   {
@@ -127,7 +147,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:09.604417Z",
-     "start_time": "2020-05-20T22:30:09.601402Z"
+     "end_time": "2020-05-20T23:13:19.221164Z",
+     "start_time": "2020-05-20T23:13:19.217527Z"
     },
     "code_folding": []
    },
@@ -181,14 +203,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:09.616519Z",
-     "start_time": "2020-05-20T22:30:09.607875Z"
+     "end_time": "2020-05-20T23:13:41.046377Z",
+     "start_time": "2020-05-20T23:13:41.037292Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'employees': [{'firstName': 'Matt', 'lastName': 'Sparr'},\n",
+       "  {'firstName': 'James', 'lastName': 'Irving'},\n",
+       "  {'firstName': 'Victor', 'lastName': 'Geislinger'}]}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data"
    ]
@@ -202,25 +237,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:09.621229Z",
-     "start_time": "2020-05-20T22:30:09.618083Z"
+     "end_time": "2020-05-20T23:13:43.793785Z",
+     "start_time": "2020-05-20T23:13:43.788986Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:32.488360Z",
-     "start_time": "2020-05-20T22:30:32.485151Z"
+     "end_time": "2020-05-20T23:14:47.582323Z",
+     "start_time": "2020-05-20T23:14:47.578280Z"
     }
    },
    "outputs": [],
@@ -234,14 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:33.871987Z",
-     "start_time": "2020-05-20T22:30:33.867422Z"
+     "end_time": "2020-05-20T23:14:58.051925Z",
+     "start_time": "2020-05-20T23:14:58.047327Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'employees': [{'firstName': 'Matt', 'lastName': 'Sparr'},\n",
+       "  {'firstName': 'James', 'lastName': 'Irving'},\n",
+       "  {'firstName': 'Victor', 'lastName': 'Geislinger'}]}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## TESTING LOADING .JSON FILE INTO A DICT\n",
     "with open(fpath,'r') as file:\n",
@@ -251,14 +310,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:34.439399Z",
-     "start_time": "2020-05-20T22:30:34.436093Z"
+     "end_time": "2020-05-20T23:15:00.213077Z",
+     "start_time": "2020-05-20T23:15:00.209699Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(testing)"
    ]
@@ -284,42 +354,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:35.672603Z",
-     "start_time": "2020-05-20T22:30:35.669275Z"
+     "end_time": "2020-05-20T23:17:10.912619Z",
+     "start_time": "2020-05-20T23:17:10.908126Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['employees'])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "testing.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:36.033276Z",
-     "start_time": "2020-05-20T22:30:36.029814Z"
+     "end_time": "2020-05-20T23:17:28.421470Z",
+     "start_time": "2020-05-20T23:17:28.417549Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'firstName': 'Matt', 'lastName': 'Sparr'},\n",
+       " {'firstName': 'James', 'lastName': 'Irving'},\n",
+       " {'firstName': 'Victor', 'lastName': 'Geislinger'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "testing['employees']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:36.369197Z",
-     "start_time": "2020-05-20T22:30:36.365961Z"
+     "end_time": "2020-05-20T23:17:35.635803Z",
+     "start_time": "2020-05-20T23:17:35.632036Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## JSON often has a LIST of dictionaries stored inside a key\n",
     "type(testing['employees'])"
@@ -327,14 +432,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:36.748678Z",
-     "start_time": "2020-05-20T22:30:36.745423Z"
+     "end_time": "2020-05-20T23:17:43.637690Z",
+     "start_time": "2020-05-20T23:17:43.633632Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'firstName': 'Matt', 'lastName': 'Sparr'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Slicing Out First record from list of dicts\n",
     "testing['employees'][0]"
@@ -342,14 +458,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:37.070648Z",
-     "start_time": "2020-05-20T22:30:37.067485Z"
+     "end_time": "2020-05-20T23:18:18.717554Z",
+     "start_time": "2020-05-20T23:18:18.714342Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Matt'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Slicing out the firstName key from the first record \n",
     "testing['employees'][0]['firstName']"
@@ -357,14 +484,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:37.854559Z",
-     "start_time": "2020-05-20T22:30:37.349937Z"
+     "end_time": "2020-05-20T23:19:00.823680Z",
+     "start_time": "2020-05-20T23:18:59.953567Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Matt</td>\n",
+       "      <td>Sparr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>James</td>\n",
+       "      <td>Irving</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Victor</td>\n",
+       "      <td>Geislinger</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  firstName    lastName\n",
+       "0      Matt       Sparr\n",
+       "1     James      Irving\n",
+       "2    Victor  Geislinger"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Pandas can make dataframes from a list of dicts (called records)\n",
     "import pandas as pd\n",
@@ -595,33 +779,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:42.179957Z",
-     "start_time": "2020-05-20T22:30:41.934263Z"
+     "end_time": "2020-05-20T23:57:01.376817Z",
+     "start_time": "2020-05-20T23:57:01.035391Z"
     },
     "colab": {},
     "colab_type": "code",
     "id": "vjHy47i5N_hd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "\n",
     "# Getting the response from our request \n",
     "resp = requests.get('https://www.google.com')\n",
     "\n",
-    "type(resp)"
+    "type(resp)\n",
+    "resp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:42.184606Z",
-     "start_time": "2020-05-20T22:30:42.181498Z"
+     "end_time": "2020-05-20T23:56:50.293044Z",
+     "start_time": "2020-05-20T23:56:50.288811Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -631,18 +827,29 @@
     "id": "Hiwv6-vEkLJ-",
     "outputId": "35fdc8dc-6815-4c54-c067-1bf1a782fcaf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "requests.codes.ok"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:42.206071Z",
-     "start_time": "2020-05-20T22:30:42.202913Z"
+     "end_time": "2020-05-20T23:57:11.682863Z",
+     "start_time": "2020-05-20T23:57:11.679079Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -652,7 +859,16 @@
     "id": "5iqt4HliN_hk",
     "outputId": "1808a4ec-950f-49c7-bb92-2e7dd7cf17bc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response Code: 200\n",
+      "Is it OK? True\n"
+     ]
+    }
+   ],
    "source": [
     "print('Response Code:',resp.status_code)\n",
     "print('Is it OK?',resp.status_code == requests.codes.ok)"
@@ -670,11 +886,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:42.786016Z",
-     "start_time": "2020-05-20T22:30:42.783765Z"
+     "end_time": "2020-05-20T23:57:19.440505Z",
+     "start_time": "2020-05-20T23:57:19.435872Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -685,7 +901,15 @@
     "outputId": "99afd10b-bf97-44c9-a93f-bce9d8838101",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!doctype html><html itemscope=\"\" itemtype=\"http://schema.org/WebPage\" lang=\"en\"><head><meta content=\"Search the world's information, including webpages, images, videos and more. Google has many special features to help you find exactly what you're looking for.\" name=\"description\"><meta content=\"noodp\" name=\"robots\"><meta content=\"text/html; charset=UTF-8\" http-equiv=\"Content-Type\"><meta content=\"/logos/doodles/2020/israel-kamakawiwooles-61st-birthday-6753651837108391-l.png\" itemprop=\"image\"><meta content=\"Israel Kamakawiwo&#699;ole's 61st Birthday\" property=\"twitter:title\"><meta content=\"Israel Kamakawiwo&#699;ole's 61st Birthday! #GoogleDoodle\" property=\"twitter:description\"><meta content=\"Israel Kamakawiwo&#699;ole's 61st Birthday! #GoogleDoodle\" property=\"og:description\"><meta content=\"summary_large_image\" property=\"twitter:card\"><meta content=\"@GoogleDoodles\" property=\"twitter:site\"><meta content=\"https://www.google.com/logos/doodles/2020/israel-kamakawiwooles-61st-birthday-675365\n"
+     ]
+    }
+   ],
    "source": [
     "# Full HTML doc\n",
     "print(resp.text[:1000])"
@@ -693,11 +917,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:42.955405Z",
-     "start_time": "2020-05-20T22:30:42.952873Z"
+     "end_time": "2020-05-20T23:57:25.469391Z",
+     "start_time": "2020-05-20T23:57:25.466286Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -707,18 +931,26 @@
     "id": "NEqo8d4JN_ho",
     "outputId": "81716f19-65ce-4cd4-ba59-1da00704a66a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Date': 'Wed, 20 May 2020 23:57:01 GMT', 'Expires': '-1', 'Cache-Control': 'private, max-age=0', 'Content-Type': 'text/html; charset=ISO-8859-1', 'P3P': 'CP=\"This is not a P3P policy! See g.co/p3phelp for more info.\"', 'Content-Encoding': 'gzip', 'Server': 'gws', 'X-XSS-Protection': '0', 'X-Frame-Options': 'SAMEORIGIN', 'Set-Cookie': '1P_JAR=2020-05-20-23; expires=Fri, 19-Jun-2020 23:57:01 GMT; path=/; domain=.google.com; Secure, NID=204=hgU_WDaTMTUKwCgEBMCxijD59Nlkt9Jg9-f7TCx6DK6grmUNxx5HRTQKbO6O8n3Z49sRC5VQvWctzAmhM0RcIOlbpgIB-Zbo2-h_Om9jjLA7U9OjfC1QmIG3EM_UIrQX3Aqh-1Naif4AArn5RJFbriTi8MEjBUYJfqyKGM_Ou5g; expires=Thu, 19-Nov-2020 23:57:01 GMT; path=/; domain=.google.com; HttpOnly', 'Alt-Svc': 'h3-27=\":443\"; ma=2592000,h3-25=\":443\"; ma=2592000,h3-T050=\":443\"; ma=2592000,h3-Q050=\":443\"; ma=2592000,h3-Q049=\":443\"; ma=2592000,h3-Q048=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"', 'Transfer-Encoding': 'chunked'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(resp.headers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:51.501782Z",
-     "start_time": "2020-05-20T22:30:51.498561Z"
+     "end_time": "2020-05-20T23:57:33.167083Z",
+     "start_time": "2020-05-20T23:57:33.162987Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -729,7 +961,16 @@
     "outputId": "5656e2be-1afc-4837-b378-60cc3ab720f0",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wed, 20 May 2020 23:57:01 GMT\n",
+      "gws\n"
+     ]
+    }
+   ],
    "source": [
     "headers = resp.headers\n",
     "print(headers['Date'])   # Date the response was sent\n",
@@ -748,11 +989,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:54.023804Z",
-     "start_time": "2020-05-20T22:30:53.981445Z"
+     "end_time": "2020-05-20T23:58:08.340651Z",
+     "start_time": "2020-05-20T23:58:08.247234Z"
     },
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -762,7 +1003,25 @@
     "id": "2s8ZFBkFN_hs",
     "outputId": "1b267813-0be9-42e9-9374-553f36028052"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'args': {'password': 'i<3peach', 'user_name': 'luigi'},\n",
+       " 'headers': {'Accept': '*/*',\n",
+       "  'Accept-Encoding': 'gzip, deflate',\n",
+       "  'Host': 'httpbin.org',\n",
+       "  'User-Agent': 'python-requests/2.22.0',\n",
+       "  'X-Amzn-Trace-Id': 'Root=1-5ec5c410-eb7d90215994fb75835fa73d'},\n",
+       " 'origin': None,\n",
+       " 'url': 'http://httpbin.org/get?user_name=luigi&password=i<3peach'}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "credentials = {'user_name': 'luigi', 'password': 'i<3peach'}  \n",
     "r = requests.get('http://httpbin.org/get', params=credentials)\n",
@@ -774,14 +1033,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:30:54.474794Z",
-     "start_time": "2020-05-20T22:30:54.472088Z"
+     "end_time": "2020-05-20T23:58:22.496799Z",
+     "start_time": "2020-05-20T23:58:22.493864Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(results))"
    ]
