--- a/Mod 2/sect_13_and_14/sect_13_and_14_CLT_and_Hypothesis_testing_SG.ipynb
+++ b/Mod 2/sect_13_and_14/sect_13_and_14_CLT_and_Hypothesis_testing_SG.ipynb
@@ -2124,7 +2124,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:learn-env] *",
+   "display_name": "Python [conda env:learn-env]",
    "language": "python",
    "name": "conda-env-learn-env-py"
   },
