Fixed sect_08 video url

--- a/Mod 1/sect_08_mongodb.ipynb
+++ b/Mod 1/sect_08_mongodb.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "#### RESOURCES FOR WINDOWS:\n",
-    "- [Video on installing MongoDB by Downloading from Mongo](https://www.youtube.com/watch?v=FwMwO8pXfq)\n",
+    "- [Video on installing MongoDB by Downloading from Mongo](https://youtu.be/UmP_X4UuGos) **updated url**\n",
     "- [Article on Getting MongoDB Working in GitBash](https://teamtreehouse.com/community/how-to-setup-mongodb-on-windows-cmd-or-gitbash-with-shortcuts)\n",
     "\n",
     "#### Installation Steps\n",
