--- a/Mod 2/mod_2_final_project/final_mod_2_project_study_group.ipynb
+++ b/Mod 2/mod_2_final_project/final_mod_2_project_study_group.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 041320 PT\n",
+    "- online-ds-pt-041320\n",
     "- 07/31/20"
    ]
   },
@@ -34,6 +34,7 @@
     "\n",
     "\n",
     "- **Project-Related How-tos:**\n",
+    "    - Writing your README\n",
     "    - Example README.mds\n",
     "    - Model validation for regression\n"
    ]
@@ -120,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project How-To"
+    "# Project How-To's"
    ]
   },
   {
@@ -142,8 +143,7 @@
     "- **To export your figures for your README there are several options:**\n",
     "    - Save your figures manually (right click >save image as)\n",
     "    - OR programming using [matplotlib's `plt.savefig` function](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.savefig.html)\n",
-    "    - OR export your notebook to a .md file in order to get the .zip file with all of your output images. \n",
-    "- https://github.com/xinegan88/the-winning-formula"
+    "    - OR export your notebook to a .md file in order to get the .zip file with all of your output images. \n"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Validation for Mod 2 Project"
+    "## Model Validation for Mod 2 Project"
    ]
   },
   {
@@ -331,43 +331,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-31T22:49:46.037384Z",
-     "start_time": "2020-07-31T22:49:45.970377Z"
+     "end_time": "2020-07-31T23:20:46.631511Z",
+     "start_time": "2020-07-31T23:20:46.513267Z"
     }
    },
    "outputs": [],
    "source": [
     "# Import model validation functions\n",
-    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import r2_score, mean_squared_error\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-31T22:49:46.045909Z",
-     "start_time": "2020-07-31T22:49:46.038414Z"
+     "end_time": "2020-07-31T23:25:01.026160Z",
+     "start_time": "2020-07-31T23:25:01.015837Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((14289, 30), (4764, 30))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Create a training and test set\n",
-    "df_train, df_test = train_test_split(df,test_size=0.25,shuffle=True)\n",
+    "df_train, df_test = train_test_split(df,test_size=0.25,shuffle=True,\n",
+    "                                     random_state=321)\n",
     "df_train.shape, df_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-31T22:49:46.164864Z",
-     "start_time": "2020-07-31T22:49:46.046935Z"
+     "end_time": "2020-07-31T23:25:01.406402Z",
+     "start_time": "2020-07-31T23:25:01.237638Z"
     }
    },
    "outputs": [],
@@ -379,15 +391,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-31T22:49:46.270432Z",
-     "start_time": "2020-07-31T22:49:46.166207Z"
+     "end_time": "2020-07-31T23:25:01.520241Z",
+     "start_time": "2020-07-31T23:25:01.411941Z"
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data R-Squared = 0.796\n",
+      "Training Data R-Squared = 0.798\n"
+     ]
+    }
+   ],
    "source": [
     "## Get Model Predictions and Calculate Training R2\n",
     "r2_train = r2_score(df_train['price'],model.predict(df_train))\n",
@@ -398,7 +419,7 @@
     "print(f'Training Data R-Squared = {round(r2_test,3)}')\n",
     "\n",
     "## Display model summary\n",
-    "model.summary()"
+    "# model.summary()"
    ]
   },
   {
@@ -438,7 +459,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
