--- a/Mod 2/sect_13_and_14/sect_13_and_14_CLT_and_Hypothesis_testing_SG.ipynb
+++ b/Mod 2/sect_13_and_14/sect_13_and_14_CLT_and_Hypothesis_testing_SG.ipynb
@@ -2124,7 +2124,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:learn-env]",
+   "display_name": "Python [conda env:learn-env] *",
    "language": "python",
    "name": "conda-env-learn-env-py"
   },
@@ -2138,7 +2138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.11"
   },
   "toc": {
    "base_numbering": 1,
